--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@radix-ui/react-tooltip": "^1.2.7",
 		"@shadcn/ui": "^0.0.4",
 		"apexcharts": "^4.7.0",
+		"axios": "^1.11.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.1.1",
@@ -43,6 +44,7 @@
 		"react-hook-form": "^7.56.4",
 		"react-hot-toast": "^2.5.2",
 		"react-simple-maps": "^3.0.0",
+		"recharts": "^2.15.4",
 		"tailwind-merge": "^3.2.0",
 		"tw-animate-css": "^1.2.5",
 		"zod": "^3.24.4"
